
@startuml Project1
skinparam classAttributeIconSize 0
skinparam style strictuml

title SecureChat Class Diagram

class UserLoginGUI{
  - JTextField txtUser
  - JPasswordField txtPass
  - JButton btnLogin
  - JLabel lblUserStatus
  - JLabel lblPassStatus
  + CSC_UserLoginGUI_Draft()
  + actionPerformed(ActionEvent e)
  - validateUsername()
  - validatePassword()
  - loginUser()
  - showMessage(String title, String message, int messageType)
  + main(String[] args)
}

class ChatClientGUI {
  - JTextArea chatArea
  - JTextField inputField
  - CSC_Client_Draft2 client
  - String username
  - JButton sendButton
  - JButton clearButton
  + ChatClientGUI(String username)
  + connect(String host, int port)
  + appendMessage(String msg)
}


class Client {
  - Socket socket
  - PrintWriter out
  - BufferedReader in
  - ChatClientGUI gui
  - String username
  - String IP_ADDRESS
  - int port
  + CSC_Client_Draft2(String host, int port, ChatClientGUI gui, String username)
  + sendMessage(String plaintext)
  + main(String[] args)
}

class Server {
  - ServerSocket serverSocket
  - List<ClientHandler> clients
  - BufferedWriter logWriter
  + start(int port)
  + broadcast(String encryptedMsg, ClientHandler sender)
  - logMessage(String encryptedMsg)
  + removeClient(ClientHandler handler)
  + main(String[] args)
}

class ClientHandler {
  - Socket socket
  - CSC_Server server
  - PrintWriter out
  - BufferedReader in
  + ClientHandler(Socket socket, CSC_Server server)
  + run()
  + send(String encryptedMsg)
  - close()
}

class AESUtil {
  - String ALGORITHM
  - String KEY
  + encrypt(String data) : String
  + decrypt(String encryptedData) : String
}



UserLoginGUI --> ChatClientGUI : opens after succesful login
ChatClientGUI --> Client : uses Client
Client --> AESUtil : encrypts/decrypts with
Client --> ChatClientGUI : updates GUI
Server "1" o-- "many" ClientHandler : manages
ClientHandler --> Server : forwards messages to
ClientHandler --> AESUtil : passes encrypted data
@enduml